--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,7 @@
 </head>
 <body>
   <div id="root">Loading...</div>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <script src="/bundle.js" charset="utf-8"></script>
 </body>
 </html>
