added images for Ligue 1 and La Liga

--- a/lib/styles/app.css
+++ b/lib/styles/app.css
@@ -68,6 +68,11 @@
   width: 100px;
 }
 
+/* team image css common to matches/standings.. */
+.team-img {
+  width: 24px;
+}
+
 /* standings area */
 .standings-data {
   margin: auto;
