standings dont look good now...

--- a/lib/styles/app.css
+++ b/lib/styles/app.css
@@ -135,3 +135,16 @@
   border: 1px solid green;
   padding: .5em .5em;
 }
+
+/* #standings-row>td {
+  padding: .2em .4em;
+}
+
+#standings-row>td>img {
+  margin-left: .1em;
+  margin-right: .1em;
+}
+
+#standings-row .standings-row-position {
+  text-align: center;
+} */
